# simple-bazel

./: .gitignore  MODULE.bazel  auto_generated_20250827_223821.txt  projectview.bazelproject  requirements_lock.txt  sbom.json  standard.bazelproject  unilog.txt  unused.bazelproject
analysis/: example_allquery.sh  example_setquery.sh
analysis/test_xmls/: JavaJunit5.xml
nested/: MODULE.bazel
nested/src/numberer/: BUILD  NumberPrinter.java  PythonPrinter.py
src/: BUILD
src/kotlin/numberer/: BUILD  KotlinPrinter.kt  LargeNumberPrinter.java  StringDuplicator.kt
src/kotlin/other/: BUILD  LargeHello4932.java  Nullo5772.java
src/kotlin/tests/: BUILD  KotlinJ4Test.kt  KotlinJ5Test.kt  MathJ4Test.java  MathJ5Test.java  MathJ5TestBackup.java  MathTest.java
src/kotlin/tests/indirect/: BUILD  MathTest.java
src/kotlin/tests/specialCases/: BUILD  SimilarNamesTest.java
src/macros/: another.bzl  junit5.bzl  simple.bzl  testing.bzl
src/python/: BUILD  PythonPrinter.py  unittest_test.py
src/python/fgh/: ijk.py  pqr.py
src/python/test/: BUILD  JustFile.py  pytest_test.py  unittest_test.py
test_xmls/: JavaJunit4.xml  KotlinJunit4.xml  KotlinJunit5.xml
