module(
    name = "simple-bazel",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "rules_java", version = "7.8.0")
bazel_dep(name = "rules_kotlin", version = "1.9.6")

bazel_dep(name = "rules_jvm_external", version = "6.2")

# register_toolchains(
#     "//:kotlin_toolchain",
# )

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.12",
        "org.junit.jupiter:junit-jupiter:5.11.2",
        "org.junit.jupiter:junit-jupiter-api:5.11.2",
        "org.junit.platform:junit-platform-console:1.11.2",
        "com.google.code.gson:gson:2.11.0"
    ],
    fetch_sources = True,
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
)
use_repo(
    maven,
    "maven",
)
